# RustPractice

control_flows/src/: main.rs
functions/: 3-3functions.md
functions/src/: main.rs
guess/: Cargo.toml
guess/src/: main.rs
guessing_game/src/: main.rs
variables/src/: main.rs
