[package]
name = "guess"
version = "0.1.0"
edition = "2021"

# 의존성 섹션 [] 이후의 모든 값은 []의 내용으로 포함
[dependencies]

# rand 크레이트 의존성 명시
rand = "0.8.5"

# 의존성 명시 후 cargo build 로 rand crate를 포함했음
# 여기에 명시한 크레이트는 Crates.io(러스트 오픈소스 공개된 곳)에서 가져옴
# rand가 동작하기 위한 다른 크레이트도 가져옴

# 처음 cargo build를 호출 시 크레이트의 버전을
# cargo.lock 에 기록

# 나중에 크레이트가 업데이트되어도 코드가 동작하는 것을 보장

# 크레이트의 업데이트를 원할 땐 cargo update 명령어를 사용.
# 0.8.5 로 명시되었기 떄문에 0.9.0 아래의 버전 중
# 최신 버전으로 업데이트함